--- a/style.css
+++ b/style.css
@@ -5,5 +5,5 @@ body {
   background-attachment: fixed;
   background-repeat: no-repeat;
   margin: 0px;
-  font-family: "Yu Gothic UI", sans-serif; 
+  font-family: "Red Hat Display", sans-serif; 
 }
